Fix to hw1 setting

--- a/springboot/seminar1/assignment1/seminar/src/main/resources/application.yml
+++ b/springboot/seminar1/assignment1/seminar/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/seminar?serverTimezone=UTC
     username: waffle-spring
-    password: wafflestudio
+    password: WaffleStudio22^.^
   sql:
     init:
       mode: always
